# MADELEINE

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/datasets/: dataset.py  wsi_dataset.py
core/models/: Model.py  factory.py
core/preprocessing/: conch_patch_embedder.py  patching.py  segmentation.py  wsi.py
core/preprocessing/hest_modules/: SegDataset.py  segmentation.py  wsi.py
core/utils/: file_utils.py  loss.py  process_args.py  setup_components.py  trainer.py  utils.py
dataset_csv/ACROBAT/: ACROBAT.csv
dataset_csv/BCNB/: BCNB.csv
madeleine/datasets/: modalities.py
madeleine/models/: Model.py  abmil.py  factory.py
madeleine/preprocessing/: conch_patch_embedder.py
madeleine/preprocessing/hest_modules/: segmentation.py  wsi.py
madeleine/utils/: process_args.py  setup_components.py  trainer.py  utils.py
scripts/: launch_pretrain_withStainEncodings.sh  launch_pretrain_withoutStainEncodings.sh  master.sh
walkthrough/: example_notebook.ipynb
