[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madeleine"
version = "0.0.1"
description = "Multistain Pretraining for Slide Representation Learning in Pathology (ECCV'24)."
authors = [
    { name = "Guillaume Jaume", email = "gjaume@bwh.harvard.edu" },
    { name = "Anurag Vaidya", email = "avaidya@mit.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "einops>=0.8",
    "h5py>=3.9",
    "wandb>=0.17",
    "torch>=2.3.1",
    "geopandas>=1.0",
    "huggingface_hub",
    "shapely"
]

[project.urls]
Homepage = "https://github.com/mahmoodlab/madeleine"

[tool.setuptools.packages.find]
include = ["madeleine", "madeleine.*"]  # Ensure 'core' and submodules are included
